Bug 375351 - Opening apps is not reliable
Summary: Opening apps is not reliable
Status: RESOLVED FIXED
Alias: None
Product: plasmashell
Classification: Plasma
Component: System Tray widget (other bugs)
Version First Reported In: master
Platform: Neon Linux
: NOR normal
Target Milestone: 1.0
Assignee: Plasma Bugs List
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2017-01-20 22:18 UTC by Roman Gilg
Modified: 2017-03-06 16:59 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Roman Gilg 2017-01-20 22:18:19 UTC
Certain third party applications, which can be minimized to the system tray, are not working properly when trying to open their associated windows from the tray icon. Examples:

- Steam: left click not working, need to right click and raise from context menu
- Discord: the same + window is below certain other application windows (e.g. Chrome, Gimp) if these are maximized when doing the right click workaround
- Telegram: normally opens on left click, but sometimes only working after a few clicks (need to investigate further)
Comment 1 Roman Gilg 2017-02-02 13:25:42 UTC
Git commit 5d5518455d10406292495c6e6874eeeb7c4534f1 by Roman Gilg.
Committed on 02/02/2017 at 13:20.
Pushed by romangilg into branch 'master'.

[System Tray] SNI fallback to context menu on failing Activate

This patch primarily is aimed at applications using libappindicator.
For example:
* Steam
* Discord
* Deluge
libappindicator doesn't provide functionality for raising an application,
but only a context menu. Since it also doesn't even provide the corresponding
DBus method, we use the resulting error to try to display the context menu
instead, which matches the behaviour on Unity and Gnome.

Reviewers: #plasma, davidedmundson

Subscribers: plasma-devel

Tags: #plasma

Differential Revision: https://phabricator.kde.org/D4301

M  +8    -1    applets/systemtray/package/contents/ui/items/StatusNotifierItem.qml
M  +8    -1    dataengines/statusnotifieritem/statusnotifieritemjob.cpp
M  +1    -0    dataengines/statusnotifieritem/statusnotifieritemjob.h
M  +14   -1    dataengines/statusnotifieritem/statusnotifieritemsource.cpp
M  +2    -0    dataengines/statusnotifieritem/statusnotifieritemsource.h

https://commits.kde.org/plasma-workspace/5d5518455d10406292495c6e6874eeeb7c4534f1
Comment 2 David Edmundson 2017-03-06 16:59:20 UTC
*** Bug 365308 has been marked as a duplicate of this bug. ***